examples/misc/error/compilation/module_import-rec_2.bfml
open import
  "../compilation/module_import-rec_1.bfr"

let main = []